# pipe-dream

./: .bashrc  .gitignore  .gitmodules  .mcp.json  Architectural-Assessment-QMS-Remediation-Proposal.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SDLC-FLOW-RS.md  SELF.md  Security_Audit_Summary_Report.md  The-Provenance-of-Process.md  The-Recursive-Governance-Loop.md  app_state.py  claude-session-updated.sh  claude-session-v2.sh  claude-session-v3.sh  claude-session.sh  config.py  constraint_solver.py  constraints.py  dashboard.py  definitions.py  demo.py  discussion-subconscious-agent.md  editor.py  file_io.py  fix_imports.py  flow_state_app.py  geometry.py  input_handler.py  launch.sh  launcher.py  main.py  main.py.py  model_builder.py  multi-agent-session.sh  pd-status  pipe.json  (+14 more)
agent-hub/: .gitignore  README.md  pyproject.toml
agent-hub/agent_hub/: __init__.py  __main__.py  broadcaster.py  cli.py  config.py  container.py  hub.py  inbox.py  models.py  notifier.py  policy.py  pty_manager.py  services.py
agent-hub/agent_hub/api/: routes.py  server.py  websocket.py
agent-hub/docker/: .env.example  .gitignore  .mcp.json  CONTAINER-GUIDE.md  README.md  docker-compose.yml  entrypoint.sh
agent-hub/docker/scripts/: mcp_proxy.py  start-git-mcp.sh  start-mcp-server.sh
agent-hub/gui/: README.md  package-lock.json  package.json
agent-hub/gui/src/: App.tsx  constants.ts  ensureHub.ts  main.tsx  types.ts
agent-hub/gui/src-tauri/: Cargo.toml
agent-hub/mcp-servers/git_mcp/: __init__.py  (+3 more)
agent-hub/tests/: test_control_mode.py  test_websocket_uat.py
(+2087 files in other folders)
