[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hub"
version = "0.1.0"
description = "Multi-agent container orchestration for Pipe Dream"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "docker>=7.0.0",
    "watchdog>=4.0.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
agent-hub = "agent_hub.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
