[package]
name = "agent-gui"
version = "0.1.0"
description = "Pipe Dream Agent Hub GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "agent_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
